--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2023-Present</span>
 						<h2>Software Developer</h2>
-						<span class="position">Charles Schwab</span>
+						<span class="position">Western Union</span>
 						<p class="mt-4">I contribute to building and maintaining advanced technology solutions for the financial services sector. My role spans both front-end and back-end development, ensuring Schwab's platforms deliver secure, scalable, and high-performance services for investors and businesses.
 							<ul>
 								<li>Designed scalable microservices and RESTful APIs using Spring Boot.</li>
@@ -344,9 +344,9 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-2023</span>
+						<span class="date">2022-2023</span>
 						<h2>Software Developer</h2>
-						<span class="position">Legacy Health</span>
+						<span class="position">Thomson Reuters</span>
 						<p class="mt-4">I helped develop and enhance healthcare applications to improve operational efficiency and patient care across the hospital network. I focused on both front-end and back-end development, ensuring secure, scalable, and compliant solutions integrated with legacy systems.
 							<ul>
 								<li>Created dynamic interfaces with React.js and Redux for seamless user interaction.</li>
@@ -360,9 +360,9 @@
 				</div>
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
+						<span class="date">2019-2021</span>
 						<h2>Software Developer</h2>
-						<span class="position">Honeywell</span>
+						<span class="position">Teladoc Health</span>
 						<p class="mt-4">As a Software Developer at Honeywell, I developed scalable applications to enhance product functionality and optimize user experience across appliances and industrial systems.
 							<ul>
 								<li>Built interactive dashboards with Angular 9 for inventory analytics.</li>
@@ -376,9 +376,9 @@
 				</div>
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2017-2019</span>
+						<span class="date">2018-2019</span>
 						<h2>Software Developer</h2>
-						<span class="position">Lister Technologies</span>
+						<span class="position">TechTree IT systems Pvt Ltd</span>
 						<p class="mt-4">I developed custom software solutions, optimizing both front-end and back-end components to improve business processes and ensure seamless system integration.
 							<ul>
 								<li>Implemented backend services with Spring Boot and JWT for security.</li>
