--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 .skill-mf .progress {
-  /* background-color: #cde1f8; */
+  /* background-color: #cde1f; */
   margin: .5rem 0 1.2rem 0;
   border-radius: 0;
   height: .7rem;
@@ -187,7 +187,7 @@
 						<br>
 						<br>
 			            <h2>A Software Developer</h2>
-						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 8 years of experience</h2> -->
+						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 7 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://github.com/grihsmagolla" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -219,7 +219,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Grishma Golla</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Software Developer</span></p>
-										<p><span class="title-s">Experience: </span> <span>8 Years</span></p>
+										<p><span class="title-s">Experience: </span> <span>7 Years</span></p>
 										<p><span class="title-s">Country: </span> <span>United States</span></p>
 									  </div>
 									</div>
@@ -273,7 +273,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<pWith more than 8 years of comprehensive experience in developing enterprise and web applications, I focus on designing and delivering scalable, high-performance systems. Holding a master’s degree in computer science, I have strong expertise in full-stack development, microservices architecture, and cloud technologies. I am driven by a passion for creating reliable solutions that address intricate business challenges.</p>
+								<p With more than 7 years of comprehensive experience in developing enterprise and web applications, I focus on designing and delivering scalable, high-performance systems. Holding a master’s degree in computer science, I have strong expertise in full-stack development, microservices architecture, and cloud technologies. I am driven by a passion for creating reliable solutions that address intricate business challenges.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Full Stack Java Development</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>E-commerce, Healthcare, Financial, &amp; Banking</span></li>
@@ -293,7 +293,7 @@
 									<span class="number" data-number="15">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>-->
-								<p><a href="https://www.linkedin.com/in/jyothi-sridhar-tammana-2768a8343/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/grishma-golla-224316343/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -311,7 +311,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Seasoned Full Stack Java Developer with 8+ years of experience designing, developing, and maintaining scalable enterprise applications. Proficient in Java, Spring Boot, and modern front-end frameworks like React.js and Angular, with proven success in leading projects and collaborating across teams.
+            <p>Seasoned Full Stack Java Developer with 7 years of experience designing, developing, and maintaining scalable enterprise applications. Proficient in Java, Spring Boot, and modern front-end frameworks like React.js and Angular, with proven success in leading projects and collaborating across teams.
 
 			</p>
           </div>
